--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -229,8 +229,7 @@ header {
 .reset-btn {
 	position        : fixed;
 	bottom          : 15px;
-	right           : 2%;
-	margin-right    : 52px;
+	right           : 64px;
 	display         : none;
 	width           : 33px;
 	height          : 33px;
@@ -266,7 +265,7 @@ header {
 .fire-btn {
 	position        : fixed;
 	bottom          : 15px;
-	right           : 2%;
+	right           : 10px;
 	display         : none;
 	width           : 50px;
 	height          : 50px;
@@ -290,7 +289,7 @@ header {
 .fire-btn-shadow {
 	position          : fixed;
 	bottom            : 15px;
-	right             : 2%;
+	right             : 10px;
 	display           : none;
 	width             : 50px;
 	height            : 50px;
@@ -305,8 +304,7 @@ header {
 .reset-btn-shadow {
 	position          : fixed;
 	bottom            : 15px;
-	right             : 2%;
-	margin-right      : 52px;
+	right             : 64px;
 	display           : none;
 	width             : 33px;
 	height            : 33px;
@@ -606,7 +604,7 @@ header {
 
 	@media (min-width: $screen-sm)
 	{
-		right: 2%;
+		right: 12px;
 	}
 
     ul {
