--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8964,8 +8964,7 @@ header {
 .reset-btn {
   position: fixed;
   bottom: 15px;
-  right: 2%;
-  margin-right: 52px;
+  right: 64px;
   display: none;
   width: 33px;
   height: 33px;
@@ -8984,11 +8983,11 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 249, ../sass/app.scss */
+/* line 248, ../sass/app.scss */
 .reset-btn:active {
   opacity: .3;
 }
-/* line 253, ../sass/app.scss */
+/* line 252, ../sass/app.scss */
 .reset-btn i {
   margin: 0;
   padding: 0;
@@ -8996,17 +8995,17 @@ header {
   top: 2px;
 }
 
-/* line 261, ../sass/app.scss */
+/* line 260, ../sass/app.scss */
 .gmap {
   width: 100%;
   height: 35%;
 }
 
-/* line 266, ../sass/app.scss */
+/* line 265, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 15px;
-  right: 2%;
+  right: 10px;
   display: none;
   width: 50px;
   height: 50px;
@@ -9026,16 +9025,16 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 285, ../sass/app.scss */
+/* line 284, ../sass/app.scss */
 .fire-btn:active {
   opacity: .3;
 }
 
-/* line 290, ../sass/app.scss */
+/* line 289, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 15px;
-  right: 2%;
+  right: 10px;
   display: none;
   width: 50px;
   height: 50px;
@@ -9047,12 +9046,11 @@ header {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 305, ../sass/app.scss */
+/* line 304, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 15px;
-  right: 2%;
-  margin-right: 52px;
+  right: 64px;
   display: none;
   width: 33px;
   height: 33px;
@@ -9064,17 +9062,17 @@ header {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 321, ../sass/app.scss */
+/* line 319, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 325, ../sass/app.scss */
+/* line 323, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 330, ../sass/app.scss */
+/* line 328, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
@@ -9082,14 +9080,14 @@ header {
   overflow: hidden;
 }
 @media (min-width: 768px) {
-  /* line 330, ../sass/app.scss */
+  /* line 328, ../sass/app.scss */
   .park-nav ul {
     width: 640px;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 343, ../sass/app.scss */
+/* line 341, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -9097,7 +9095,7 @@ header {
   padding: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 343, ../sass/app.scss */
+  /* line 341, ../sass/app.scss */
   .park-nav ul li {
     width: 318px;
     /*account for padding*/
@@ -9106,7 +9104,7 @@ header {
     display: inline-block;
   }
 }
-/* line 357, ../sass/app.scss */
+/* line 355, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -9124,21 +9122,21 @@ header {
   transition: all 0.2s ease-out;
 }
 @media (min-width: 768px) {
-  /* line 373, ../sass/app.scss */
+  /* line 371, ../sass/app.scss */
   .park-nav ul li p {
     padding: 5px 40px 5px 10%;
   }
-  /* line 377, ../sass/app.scss */
+  /* line 375, ../sass/app.scss */
   .park-nav ul li:nth-child(1n) {
     text-align: right;
   }
-  /* line 380, ../sass/app.scss */
+  /* line 378, ../sass/app.scss */
   .park-nav ul li:nth-child(2n) {
     text-align: left;
   }
 }
 
-/* line 388, ../sass/app.scss */
+/* line 386, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.6s ease-in-out;
   -moz-transition: all 0.6s ease-in-out;
@@ -9150,20 +9148,20 @@ header {
   background-position: left center;
   background-repeat: no-repeat;
 }
-/* line 394, ../sass/app.scss */
+/* line 392, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 397, ../sass/app.scss */
+/* line 395, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 401, ../sass/app.scss */
+/* line 399, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 406, ../sass/app.scss */
+/* line 404, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9179,7 +9177,7 @@ header {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 417, ../sass/app.scss */
+/* line 415, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 72%;
@@ -9189,25 +9187,25 @@ header {
   background-color: #fff;
 }
 
-/* line 426, ../sass/app.scss */
+/* line 424, ../sass/app.scss */
 .park-list-container {
   position: relative;
   width: 100%;
 }
 
-/* line 431, ../sass/app.scss */
+/* line 429, ../sass/app.scss */
 .park-distance-ul {
   overflow: hidden;
   width: 100%;
   height: 56px;
 }
 @media all and (min-width: 768px) {
-  /* line 431, ../sass/app.scss */
+  /* line 429, ../sass/app.scss */
   .park-distance-ul {
     height: auto;
   }
 }
-/* line 440, ../sass/app.scss */
+/* line 438, ../sass/app.scss */
 .park-distance-ul ul {
   margin: 0;
   padding: 0;
@@ -9216,12 +9214,12 @@ header {
   padding-bottom: 17px;
 }
 @media all and (min-width: 768px) {
-  /* line 440, ../sass/app.scss */
+  /* line 438, ../sass/app.scss */
   .park-distance-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 451, ../sass/app.scss */
+/* line 449, ../sass/app.scss */
 .park-distance-ul ul li {
   list-style: none;
   position: relative;
@@ -9242,13 +9240,13 @@ header {
   transition: all 1s ease-in-out;
 }
 @media all and (min-width: 768px) {
-  /* line 451, ../sass/app.scss */
+  /* line 449, ../sass/app.scss */
   .park-distance-ul ul li {
     height: 75px;
     border: 6px solid #71e271;
   }
 }
-/* line 471, ../sass/app.scss */
+/* line 469, ../sass/app.scss */
 .park-distance-ul ul li:hover {
   opacity: .7;
   -webkit-transition: all 0.1s ease-in-out;
@@ -9257,7 +9255,7 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 476, ../sass/app.scss */
+/* line 474, ../sass/app.scss */
 .park-distance-ul ul li .number {
   font-size: 20px;
   display: inline-block;
@@ -9268,24 +9266,24 @@ header {
   color: #502d07;
 }
 
-/* line 489, ../sass/app.scss */
+/* line 487, ../sass/app.scss */
 .park-selected {
   opacity: .5;
 }
 
-/* line 493, ../sass/app.scss */
+/* line 491, ../sass/app.scss */
 .park-selected-official {
   border: 4px solid #502d07 !important;
   opacity: 1;
 }
 @media all and (min-width: 768px) {
-  /* line 493, ../sass/app.scss */
+  /* line 491, ../sass/app.scss */
   .park-selected-official {
     border: 6px solid #502d07 !important;
   }
 }
 
-/* line 502, ../sass/app.scss */
+/* line 500, ../sass/app.scss */
 .number-overlay {
   font-size: 62px;
   display: inline-block;
@@ -9304,23 +9302,23 @@ header {
   transform: scale(0.5, 0.5);
 }
 
-/* line 516, ../sass/app.scss */
+/* line 514, ../sass/app.scss */
 .park-info-cont {
   width: 100%;
   position: relative;
 }
-/* line 520, ../sass/app.scss */
+/* line 518, ../sass/app.scss */
 .park-info-cont ul {
   padding: 0 15px;
   margin: 0;
   color: #502d07;
 }
-/* line 525, ../sass/app.scss */
+/* line 523, ../sass/app.scss */
 .park-info-cont ul li {
   display: block;
 }
 
-/* line 532, ../sass/app.scss */
+/* line 530, ../sass/app.scss */
 .park-images-ul {
   overflow: hidden;
   width: 100%;
@@ -9328,12 +9326,12 @@ header {
   position: relative;
 }
 @media all and (min-width: 768px) {
-  /* line 532, ../sass/app.scss */
+  /* line 530, ../sass/app.scss */
   .park-images-ul {
     height: auto;
   }
 }
-/* line 542, ../sass/app.scss */
+/* line 540, ../sass/app.scss */
 .park-images-ul ul {
   margin: 0;
   padding: 0;
@@ -9343,28 +9341,28 @@ header {
   height: 148px;
 }
 @media all and (min-width: 768px) {
-  /* line 542, ../sass/app.scss */
+  /* line 540, ../sass/app.scss */
   .park-images-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 554, ../sass/app.scss */
+/* line 552, ../sass/app.scss */
 .park-images-ul ul li {
   display: inline-block;
   padding-right: 5px;
 }
-/* line 558, ../sass/app.scss */
+/* line 556, ../sass/app.scss */
 .park-images-ul ul li img {
   height: 95px;
 }
 @media all and (min-width: 768px) {
-  /* line 558, ../sass/app.scss */
+  /* line 556, ../sass/app.scss */
   .park-images-ul ul li img {
     height: 125px;
   }
 }
 
-/* line 568, ../sass/app.scss */
+/* line 566, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9379,7 +9377,7 @@ header {
   -webkit-border-radius: 50%;
 }
 
-/* line 582, ../sass/app.scss */
+/* line 580, ../sass/app.scss */
 .li-gradient-overlay {
   position: absolute;
   top: 0;
@@ -9388,7 +9386,7 @@ header {
   bottom: 0;
 }
 
-/* line 590, ../sass/app.scss */
+/* line 588, ../sass/app.scss */
 .chosen-park-list {
   position: fixed;
   top: auto;
@@ -9407,24 +9405,24 @@ header {
   opacity: .9;
 }
 @media (min-width: 768px) {
-  /* line 590, ../sass/app.scss */
+  /* line 588, ../sass/app.scss */
   .chosen-park-list {
-    right: 2%;
+    right: 12px;
   }
 }
-/* line 612, ../sass/app.scss */
+/* line 610, ../sass/app.scss */
 .chosen-park-list ul {
   padding: 0;
   margin: 0;
   padding: 10px 10px 10px 40px;
 }
 @media (min-width: 768px) {
-  /* line 612, ../sass/app.scss */
+  /* line 610, ../sass/app.scss */
   .chosen-park-list ul {
     padding: 10px 0 10px 40px;
   }
 }
-/* line 622, ../sass/app.scss */
+/* line 620, ../sass/app.scss */
 .chosen-park-list ul li {
   text-align: right;
   list-style: none;
@@ -9433,7 +9431,7 @@ header {
   padding: 4px 0;
 }
 
-/* line 632, ../sass/app.scss */
+/* line 630, ../sass/app.scss */
 .loading-screen {
   position: fixed;
   top: 0;
@@ -9448,7 +9446,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 642, ../sass/app.scss */
+/* line 640, ../sass/app.scss */
 .loading-screen .overlay {
   position: fixed;
   top: 0;
@@ -9458,7 +9456,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 652, ../sass/app.scss */
+/* line 650, ../sass/app.scss */
 .loading-screen .contents {
   position: fixed;
   top: 50%;
@@ -9470,18 +9468,18 @@ header {
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
-/* line 659, ../sass/app.scss */
+/* line 657, ../sass/app.scss */
 .loading-screen .contents svg {
   width: 60px;
   height: 60px;
 }
-/* line 664, ../sass/app.scss */
+/* line 662, ../sass/app.scss */
 .loading-screen .contents .text {
   height: 20px;
   position: relative;
   margin: 10px auto;
 }
-/* line 669, ../sass/app.scss */
+/* line 667, ../sass/app.scss */
 .loading-screen .contents .text p {
   font-size: 14px;
   padding: 0;
@@ -9492,7 +9490,7 @@ header {
   opacity: 0;
 }
 
-/* line 683, ../sass/app.scss */
+/* line 681, ../sass/app.scss */
 .loading-screen-small {
   position: absolute;
   top: 0;
@@ -9507,7 +9505,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 693, ../sass/app.scss */
+/* line 691, ../sass/app.scss */
 .loading-screen-small .overlay {
   position: absolute;
   top: 0;
@@ -9517,7 +9515,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 703, ../sass/app.scss */
+/* line 701, ../sass/app.scss */
 .loading-screen-small svg {
   width: 35px;
   height: 35px;
@@ -9532,21 +9530,21 @@ header {
   transform: translateX(-50%) translateY(-50%);
 }
 
-/* line 714, ../sass/app.scss */
+/* line 712, ../sass/app.scss */
 .fa-styling {
   color: #71e271;
   width: 16px;
   text-align: center;
 }
 
-/* line 720, ../sass/app.scss */
+/* line 718, ../sass/app.scss */
 .image-bullet-point {
   width: 16px;
   margin-left: 10px;
   margin-top: -3px;
 }
 
-/* line 726, ../sass/app.scss */
+/* line 724, ../sass/app.scss */
 footer {
   color: #71e271;
   font-size: 10px;
@@ -9554,7 +9552,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 738, ../sass/app.scss */
+/* line 736, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9564,7 +9562,7 @@ footer {
   opacity: 0;
 }
 
-/* line 743, ../sass/app.scss */
+/* line 741, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9574,17 +9572,17 @@ footer {
   opacity: 1;
 }
 
-/* line 748, ../sass/app.scss */
+/* line 746, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 752, ../sass/app.scss */
+/* line 750, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
-/* line 756, ../sass/app.scss */
+/* line 754, ../sass/app.scss */
 .ani-fadeOutZindex {
   opacity: 0;
   z-index: -1;
@@ -9595,7 +9593,7 @@ footer {
   animation: zoomAniNoRotateRev 0.3s forwards;
 }
 
-/* line 762, ../sass/app.scss */
+/* line 760, ../sass/app.scss */
 .ani-fadeInZindex {
   opacity: 1;
   z-index: 1;
@@ -9607,7 +9605,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 774, ../sass/app.scss */
+/* line 772, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.7s forwards;
   -moz-animation: zoomAni 0.7s forwards;
@@ -9616,7 +9614,7 @@ footer {
   animation: zoomAni 0.7s forwards;
 }
 
-/* line 778, ../sass/app.scss */
+/* line 776, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9625,7 +9623,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 782, ../sass/app.scss */
+/* line 780, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9634,7 +9632,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 786, ../sass/app.scss */
+/* line 784, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9643,7 +9641,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 790, ../sass/app.scss */
+/* line 788, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9652,7 +9650,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 794, ../sass/app.scss */
+/* line 792, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1s forwards;
   -moz-animation: numberZoomAni 1s forwards;
@@ -9665,7 +9663,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 802, ../sass/app.scss */
+/* line 800, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 0.5s forwards;
   -moz-animation: fadeInAndUp 0.5s forwards;
@@ -9678,7 +9676,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.08, 1.27);
 }
 
-/* line 810, ../sass/app.scss */
+/* line 808, ../sass/app.scss */
 .li-click {
   -webkit-animation: liButtonClick 0.5s forwards;
   -moz-animation: liButtonClick 0.5s forwards;
@@ -9694,7 +9692,7 @@ footer {
   perspective: 200px;
 }
 
-/* line 821, ../sass/app.scss */
+/* line 819, ../sass/app.scss */
 .li-click-text {
   -webkit-animation: liButtonClickText 4.6s forwards;
   -moz-animation: liButtonClickText 4.6s forwards;
@@ -9719,7 +9717,7 @@ footer {
   perspective: 200px;
 }
 
-/* line 837, ../sass/app.scss */
+/* line 835, ../sass/app.scss */
 .top-leaf {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreen 0.5s infinite;
@@ -9729,7 +9727,7 @@ footer {
   animation: colorSwapToBrightGreen 0.5s infinite;
 }
 
-/* line 842, ../sass/app.scss */
+/* line 840, ../sass/app.scss */
 .bottom-leaf {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreen 0.5s infinite;
@@ -9739,7 +9737,7 @@ footer {
   animation: colorSwapToDarkGreen 0.5s infinite;
 }
 
-/* line 847, ../sass/app.scss */
+/* line 845, ../sass/app.scss */
 .top-leaf-slow {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreenSlow 2.7s infinite;
@@ -9749,7 +9747,7 @@ footer {
   animation: colorSwapToBrightGreenSlow 2.7s infinite;
 }
 
-/* line 852, ../sass/app.scss */
+/* line 850, ../sass/app.scss */
 .bottom-leaf-slow {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreenSlow 2.7s infinite;
@@ -9759,7 +9757,7 @@ footer {
   animation: colorSwapToDarkGreenSlow 2.7s infinite;
 }
 
-/* line 857, ../sass/app.scss */
+/* line 855, ../sass/app.scss */
 .loading-text {
   -webkit-animation: loadingText 0.9s infinite;
   -moz-animation: loadingText 0.9s infinite;
